game still stops when panda jumps over

--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,8 @@ body{
     color: white;
     margin: auto;
     text-align: center;
-    font-size: 50px;
-    padding-top: 400px;
+    font-size: 200px;
+    top: 200px;
     display: none;
 }
 
